[package]
name = "imageboard"
version = "0.1.0"
authors = ["Ahmad Beirkdar <ahmadb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
rocket = "*"
rand = "*"
mongodb = "*"