[package]
name = "imageboard"
version = "0.1.0"
authors = ["Ahmad Beirkdar <ahmadb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.1"
sanitize-filename = "0.2"
rand = "*"
mongodb = "*"
bson = "*"
awmp = "0.6.0"