[package]
name = "imageboard"
version = "0.1.0"
authors = ["Ahmad Beirkdar <ahmadb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "*"
actix-multipart = "0.3"
futures = "0.3.1"
sanitize-filename = "0.2"
rand = "*"
bson = "*"
chrono = "*"
awmp = "0.6.0"
serde = "1.0.125"
[dependencies.mongodb]
version = "1.2.1"
default-features = false
features = ["sync"]